# opengl_tutorial

./: CMakeLists.txt  README.md
res/: basicShader.fs  basicShader.vs  colorShader.fs  colorShader.vs  lightSourceShader.fs  textureShader.fs  textureShader.vs
res/objects/: MLU_simple.mtl
res/shaders/: _complexShader.fs  _geometryShader.gs  backgroundShader.vs  colorShader.fs  colorShader.vs  complexShader.fs  complexShader.vs  dummy.fs  dummy.vs  geometryShader.gs  lightSourceShader.vs  materialShader.fs  materialShader.vs  normalShader.gs  normalShader.vs  textureShader.fs  textureShader.vs
src/: _shader.cpp  _shader.hpp  background.cpp  background.hpp  camera.cpp  camera.hpp  control.cpp  control.hpp  display.cpp  display.hpp  keyboard.cpp  keyboard.hpp  main.cpp  mesh.cpp  mesh.h  mesh.hpp  model.h  obj_loader.cpp  obj_loader.hpp  player.cpp  player.hpp  shader.cpp  shader.h  shader.hpp  stb_image.c  stb_image.h  texture.cpp  texture.hpp  transform.hpp  vertex_list.h
